kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: highlights-bot-nodeport
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: highlights-bot-web

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: highlights-bot-ingress
spec:
  backend:
    serviceName: highlights-bot-nodeport
    servicePort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: highlights-bot-web-deployment
  labels:
    app: highlights-bot-web
spec:
  selector:
    matchLabels:
      app: highlights-bot-web
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: highlights-bot-web
    spec:
      containers:
      - name: web
        image: eu.gcr.io/oceanic-throne-227920/highlights-bot:${CIRCLE_SHA1}
        command: ["gunicorn", "highlights.wsgi", "-b", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: 0.2
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: highlights-bot-schedule-tasks-deployment
  labels:
    app: highlights-bot-schedule-tasks
spec:
  selector:
    matchLabels:
      app: highlights-bot-schedule-tasks
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: highlights-bot-schedule-tasks
    spec:
      containers:
      - name: schedule-tasks
        image: eu.gcr.io/oceanic-throne-227920/highlights-bot:${CIRCLE_SHA1}
        command: ["./manage.py", "scheduler"]
        resources:
          requests:
            cpu: 0.2
